crates/functions/src/tests/string_binary/snapshots/substr/query_substr_basic_positive.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', 3, 2) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| st     |",
        "+--------+",
    ],
)
