crates/functions/src/tests/string_binary/snapshots/substr/query_substr_decimal_negative_index.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(1.23, -2, 2) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 23     |",
        "+--------+",
    ],
)
