crates/functions/src/tests/string_binary/snapshots/substr/query_substr_edge_case_one_char_negative.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('a', -1, 1) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| a      |",
        "+--------+",
    ],
)
