crates/functions/src/tests/string_binary/snapshots/substr/query_substr_empty_string_negative.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('', -1, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "|        |",
        "+--------+",
    ],
)
